// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Html renders a html component 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charSet="utf-8"
    />
    
    
    
    
    
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "window.env = {};",
        }
      }
    />
    <link
      href="/favicon.ico"
      rel="icon"
      sizes="any"
    />
    <link
      href="/icon.svg"
      rel="icon"
      type="image/svg+xml"
    />
    <link
      href="/apple-touch-icon.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="/site.webmanifest"
      rel="manifest"
    />
    <meta
      content="Plone 6 - https://plone.org"
      name="generator"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <meta
      content="yes"
      name="apple-mobile-web-app-capable"
    />
    <link
      as="script"
      crossOrigin="true"
      data-chunk="client"
      href="http://localhost:3001/static/js/runtime~client.js"
      rel="preload"
    />
  </head>
  <body
    className="class1 class2"
  >
    <div
      aria-label="Toolbar"
      id="toolbar"
      role="navigation"
    />
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<div />",
        }
      }
      id="main"
    />
    <div
      aria-label="Sidebar"
      id="sidebar"
      role="complementary"
    />
    <script
      charSet="UTF-8"
      dangerouslySetInnerHTML={
        Object {
          "__html": "window.__data={\\"content\\":{\\"@id\\":\\"http:\\\\u002F\\\\u002Fdummy\\"}};",
        }
      }
    />
    <script
      async={true}
      crossOrigin="true"
      src="bundle.js"
    />
  </body>
</html>
`;

exports[`Html renders a html component with apiPath present 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charSet="utf-8"
    />
    
    
    
    
    
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "window.env = {\\"apiPath\\":\\"https:\\\\u002F\\\\u002Fplone.org\\"};",
        }
      }
    />
    <link
      href="/favicon.ico"
      rel="icon"
      sizes="any"
    />
    <link
      href="/icon.svg"
      rel="icon"
      type="image/svg+xml"
    />
    <link
      href="/apple-touch-icon.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="/site.webmanifest"
      rel="manifest"
    />
    <meta
      content="Plone 6 - https://plone.org"
      name="generator"
    />
    <meta
      content="width=device-width, initial-scale=1"
      name="viewport"
    />
    <meta
      content="yes"
      name="apple-mobile-web-app-capable"
    />
    <link
      as="script"
      crossOrigin="true"
      data-chunk="client"
      href="http://localhost:3001/static/js/runtime~client.js"
      rel="preload"
    />
  </head>
  <body
    className="class1 class2"
  >
    <div
      aria-label="Toolbar"
      id="toolbar"
      role="navigation"
    />
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<div />",
        }
      }
      id="main"
    />
    <div
      aria-label="Sidebar"
      id="sidebar"
      role="complementary"
    />
    <script
      charSet="UTF-8"
      dangerouslySetInnerHTML={
        Object {
          "__html": "window.__data={\\"content\\":{\\"@id\\":\\"http:\\\\u002F\\\\u002Fdummy\\"}};",
        }
      }
    />
    <script
      async={true}
      crossOrigin="true"
      src="bundle.js"
    />
  </body>
</html>
`;
